# SurgFBGen

./: .env.example  .gitignore  LICENSE  README.md  constants.json  main.py  pyproject.toml  requirements.txt  reset.sh  setup.py  setup.sh
data/iat/: extractions_df.csv  o3_action_clusters-mapping.json  o3_instrument_clusters-mapping.json  o3_tissue_clusters-mapping.json  procedures_df.csv  tasks_df.csv
data/iat_predictor_splits/: train1.csv  train2.csv  train3.csv  train4.csv  train5.csv  val1.csv  val2.csv  val3.csv  val4.csv  val5.csv
research/: utils.py
research/notebooks/: evaluate_embs copy.ipynb  evaluate_embs.ipynb  evaluate_embs_image_clf.ipynb  explore_PeskaVLP.ipynb  extract_fbk_lang_embs.ipynb  extracted_iat-to-cholec.ipynb  extracted_iat-to-o3_clusters.ipynb  extracted_iat-to-rafal_clusters.ipynb  finetune_VideoMAE.ipynb  generate_fb.ipynb  generate_fb_full_gpt.ipynb  generate_fb_original_extracted_triplets.ipynb  generate_fb_video_and_iat.ipynb  inspect_cholec_data.ipynb  perception_models.ipynb  play.ipynb  test  video_captioning_example.ipynb  vqa.ipynb
research/prompts/: fb_alignment-system.txt  fb_alignment-user.txt  fb_generation-system-no_2_6_criteria.txt  fb_generation-system-no_criteria-examples.txt  fb_generation-system-no_criteria-history-examples.txt  fb_generation-system-no_criteria-history.txt  fb_generation-system-no_criteria.txt  fb_generation-system-short.txt  fb_generation-system.txt  fb_generation-user-examples.txt  fb_generation-user-history copy.txt  fb_generation-user-history-examples.txt  (+5 more)
surgfbgen/: interface.py  main.py
(+119 files in other folders)
